# RAG_backend

./: Dockerfile  README.md  app.db  demo_client.py  docker-compose.yml  main.py  pyproject.toml  requirement.txt  requirements.txt
app/: config.py  main.py
app/db/: booking_model.py  models.py  session.py
app/routers/: booking.py  chat.py  conversational.py  ingest.py
app/services/: booking_service.py  chunking.py  jwt.py  redis_memory.py  vector_store.py
app/utils/: llm.py
